# ChemCook

./: .gitignore  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: calculations.py
backend/app/chemistry/: converter.py  engine.py  stochiometry.py
backend/app/models/: calculation.py  common.py  compound.py  document.py  protocol.py  reaction.py
backend/app/services/: calculation_service.py
backend/tests/: test_calculation_service.py  test_calculations_api.py  test_chemistry_engine.py
frontend/: implementation_roadmap.md  main.py  pyproject.toml
frontend/src/: config.py
frontend/src/api/: client.py
frontend/src/components/: charts.py  layouts.py  results_viewer.py  species_editor.py
