[project]
name = "chemcook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.0",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
]
